api_versioned_docs/version-12.1.2/avalonia/controls/documents/index.mdx
---
title: 'Avalonia.Controls.Documents'
hide_title: true
slug: '/avalonia/controls/documents'
uid: 'Avalonia.Controls.Documents'
commentId: 'N:Avalonia.Controls.Documents'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Controls'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Documents'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Documents Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia.Controls.Documents`

</div>

## Types

- [Bold](bold.mdx) - Bold element - markup helper for indicating bolded content.
Equivalent to a Span with [FontWeight](xref:Avalonia.Media.FontWeight) property set to FontWeights.Bold.
Can contain other inline elements.
- [Inline](inline.mdx) - Inline element.
- [InlineCollection](inlinecollection.mdx) - A collection of [Avalonia.Controls.Documents.Inline](xref:Avalonia.Controls.Documents.Inline)s.
- [InlineUIContainer](inlineuicontainer.mdx) - [InlineUIContainer](xref:Avalonia.Controls.Documents.InlineUIContainer) - a wrapper for embedded UIElements in text
flow content inline collections
- [Italic](italic.mdx) - Italic element - markup helper for indicating italicized content.
Equivalent to a Span with [FontStyle](xref:Avalonia.Media.FontStyle) property set to FontStyles.Italic.
Can contain other inline elements.
- [LineBreak](linebreak.mdx) - LineBreak element that forces a line breaking.
- [MarkdownCodeBlock](markdowncodeblock.mdx) - A [Avalonia.Controls.Documents.Paragraph](xref:Avalonia.Controls.Documents.Paragraph) that represents a fenced code block.
Carries the language identifier so the render layer can apply
syntax highlighting without extra lookups.
- [MarkdownImage](markdownimage.mdx) - A [Avalonia.Controls.Documents.RichImage](xref:Avalonia.Controls.Documents.RichImage) that resolves its pixels from a URL through a
[Avalonia.Controls.MarkdownImageLoader](xref:Avalonia.Controls.MarkdownImageLoader). Carries the image URL and title; the image
is loaded asynchronously when presented.
- [MarkdownTaskListItem](markdowntasklistitem.mdx) - A [Avalonia.Controls.Documents.ListItem](xref:Avalonia.Controls.Documents.ListItem) that represents a task list item (checkbox).
Carries the checked state so the render layer can draw a checkbox
instead of a bullet marker.
- [Run](run.mdx) - A terminal element in text flow hierarchy - contains a uniformatted run of unicode characters
- [Span](span.mdx) - Span element used for grouping other Inline elements.
- [TextElement](textelement.mdx) - [TextElement](xref:Avalonia.Controls.Documents.TextElement) is an base class for content in text based controls.
TextElements span other content, applying property values or providing structural information.
- [Underline](underline.mdx) - Underline element - markup helper for indicating superscript content.
Equivalent to a Span with [TextDecorations](xref:Avalonia.Media.TextDecorations) property set to TextDecorations.Underlined.
Can contain other inline elements.
</ApiRefPage>

